<resources>
    <string name="app_name">Exercises</string>
    <string name="aButton"> Hello there</string>
    <string name="Name">Name</string>
    <string name="search">Search</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_testing_mavogation_delete">TestingMavogationDelete</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="help">Help</string>
    <string name="mail">Mail</string>
    <string name="call">Call</string>
    <string name="video">Video</string>
    <string name="decrease">Decrease</string>
    <string name="increase">Increase</string>
    <string name="clear">Clear</string>
    <string name="share">Share</string>
    <string name="support">Support</string>

    <string name="communications">Communications</string>

</resources>