<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/clear_item"
        android:icon="@drawable/clear"
        android:orderInCategory="300"
        android:title="@string/clear"
        app:showAsAction="ifRoom" />  <!-- This uses showAsAction=always, so look at icon= parameter -->


    <item
        android:id="@+id/search_item"
        android:icon="@android:drawable/ic_search_category_default"
        android:orderInCategory="50"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always|collapseActionView" />    <!-- This uses showAsAction=always, so look at icon= parameter -->


    <item
        android:id="@+id/help_item"
        android:icon="@android:drawable/ic_menu_help"
        android:orderInCategory="200"
        android:title="@string/help"
        app:showAsAction="ifRoom" /> <!-- This uses showAsAction=never, so look at title= parameter -->

    <item
        android:id="@+id/mail_item"
        android:icon="@drawable/mail"
        android:orderInCategory="75"
        android:title="@string/mail"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/call_item"
        android:icon="@android:drawable/sym_action_call"
        android:orderInCategory="60"
        android:title="@string/call" />
    <item
        android:id="@+id/video_item"
        android:icon="@android:drawable/presence_video_online"
        android:orderInCategory="80"
        android:title="@string/video" />
    <item
        android:id="@+id/Increase_item"
        android:icon="@drawable/increase"
        android:orderInCategory="60"
        android:title="@string/increase"
        app:showAsAction="always" />
    <item
        android:id="@+id/decrease_item"
        android:icon="@drawable/decrease"
        android:orderInCategory="60"
        android:title="@string/decrease"
        app:showAsAction="ifRoom" />
</menu>